1999-08-31  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmButtons/parse.c (ParsePanel):
	* FvwmButtons/FvwmButtons.c (Loop): slideup/down/left/right,
 	slidedelay and slidesteps options to Panel command

1999-08-30  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmButtons/draw.c (RedrawButton):
	(DrawTitle):
	(RedrawButton):
	* FvwmButtons/FvwmButtons.c (swallow):
	* FvwmButtons/FvwmButtons.h (struct button_info_struct):
	* FvwmButtons/output.c (DumpButtons):
	(SaveButtons):
	* FvwmButtons/parse.c (ParseContainer):
	(ParseButton):
	* FvwmButtons/button.c (buttonSwallow):
	(buttonSwallowCount): New 'Panel' option works like 'Swallow' but maps
	or unmaps the application every time the button is pressed instead of
	swallowing it in a button. Positioning and sliding such panels is not
	implemented yet.

1999-08-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (Loop): resizing updates colour sets

1999-08-30  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmAuto/FvwmAuto.c (main): another fix for FvwmAuto; it's probably
	still possible to make FvwmAuto fail with repeated lower/raise/restack
	packages

	* FvwmButtons/FvwmButtons.c (recursive_change_colorset): FvwmButtons
	allows to set coluor sets on all buttons and containers and updates
	them at run time
	(main): removed forgotten debug code

1999-08-29  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (change_colorset):
	(handle_colorset_packet):
	(process_message): FvwmButtons updates colorset on main window at run
	time
	(recursive_change_colorset):
	(change_swallowed_window_colorset): Colorsets on swallowed applications
	are updated at run time

	* FvwmIconMan/fvwm.c (configure_colorsets): fixed a memory leak

	* FvwmButtons/FvwmButtons.c (main):
	* FvwmButtons/parse.c (ParseConfigLine): new option
	*FvwmButtonsButtonGeometry specifies the size of all individual buttons

	* FvwmIconMan/x.c (create_manager_window): IconMan uses resize_inc 1
	vertically too
