@@ -54,6 +54,18 @@ foreground. This option affects only the foreground color of
 background_bitmap specified in *FvwmIconBoxPixmap option described
 below.
 
+.IP "*FvwmIconBoxColorset \fIcolorset\fP"
+Tells the module to use colorset (See FvwmTheme) in place of Fore and 
+Back.
+
+.IP "*FvwmIconBoxIconColorset \fIcolorset\fP"
+Tells the module to use colorset (See FvwmTheme) in place of IconFore 
+and IconBack.
+
+.IP "*FvwmIconBoxIconHiColorset \fIcolorset\fP"
+Tells the module to use colorset (See FvwmTheme) in place of IconHiFore 
+and IconHiBack.
+
 .IP "*FvwmIconBoxBack \fIcolor\fP"
 Tells the module to use \fIcolor\fP instead of black for the window
 background.
