@@ -1,3 +1,8 @@
+1999-08-31  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmButtons/FvwmButtons.c (recursive_change_colorset): fixed
+	backgorund of swallowed apps without colour sets
+
 1999-08-31  Dominik Vogt  <dominik_vogt@gmx.de>
 
 	* FvwmButtons/parse.c (ParsePanel):
